# aviot-ros-node

./: .babelrc  .gitmodules  Dockerfile  GEOFENCE.md  config.js  fakefence.py  index.js  package-lock.json  package.json  publisher.js  subscriber.cpp  subscriber.js
.Trash-1000/files/: package-lock.json
.Trash-1000/info/: package-lock.json.trashinfo
aviot_srvs/: CMakeLists.txt  DeleteFenceRequest.h  DeleteFenceResponse.h  ResetFence.h  ResetFenceResponse.h  SetFence.h  package.xml
aviot_srvs/srv/: DeleteFence.srv  ResetFence.srv  SetFence.srv
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/aviot_msgs/: ClockSync.h  FenceStatus.h
devel/include/aviot_srvs/: DeleteFence.h  DeleteFenceRequest.h  DeleteFenceResponse.h  GetFence.h  GetFenceRequest.h  GetFenceResponse.h  ListFence.h  ListFenceRequest.h  ListFenceResponse.h  ResetFenceRequest.h  ResetFenceResponse.h  SetFenceRequest.h  SetFenceResponse.h
devel/lib/pkgconfig/: aviot_msgs.pc  aviot_srvs.pc  fakefence.pc
devel/share/aviot_msgs/cmake/: aviot_msgs-msg-extras.cmake  aviot_msgs-msg-paths.cmake  aviot_msgsConfig.cmake
devel/share/aviot_srvs/cmake/: aviot_srvs-msg-extras.cmake  aviot_srvs-msg-paths.cmake  aviot_srvsConfig.cmake
devel/share/fakefence/cmake/: fakefenceConfig.cmake
devel/share/roseus/ros/aviot_msgs/: manifest.l
devel/share/roseus/ros/aviot_srvs/: manifest.l
src/: index.js  listener.js  publisher.js  subscriber.js
src/services/aviot/: index.js
src/services/janus/: index.js
src/services/log/: index.js
src/services/rosnodejs/: package-lock.json
(+169 files in other folders)
