<?xml version="1.0"?>
<package format="2">
  <name>aviot_srvs</name>
  <version>0.1.0</version>
  <description>
    aviot_srvs defines custom services.
  </description>
  <maintainer email="messina@etnamatica.com">Dario Messina</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
